k8s/services/comments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: comments
